# auth-studies

./: .gitignore  README.md  pyproject.toml
ecom/: db.py  main.py  settings.py
ecom/auth/: crypto.py  exceptions.py  models.py  routes.py  schemas.py  types.py  usecases.py
tests/: conftest.py
tests/auth/: test_login_mfa_with_totp_usecase.py  test_login_with_magic_link_usecase.py  test_login_with_password_usecase.py  test_register_account_with_credentials_usecase.py  test_register_account_with_google_oauth.py  test_register_account_with_magic_link_usecase.py
